/resources/scss/: fixed bottom toolbar overlapping content in BO on mobile displays

--- a/resources/scss/pmp-back.scss
+++ b/resources/scss/pmp-back.scss
@@ -302,7 +302,7 @@ body {
 
         @media only screen and (max-width: 991px) {
             margin-top: 0;
-            margin-bottom: 0;
+            margin-bottom: 2.4em;
         }
     }
 
